@@ -750,8 +750,8 @@ void TestTriggers(int x, int y, int z, FloorInfo* floor, Activator activator, bo
 			break;
 
 		case TO_FINISH:
-			RequiredStartPos = false;
-			NextLevel = CurrentLevel + 1;
+			NextLevel = value ? value : CurrentLevel + 1;
+			RequiredStartPos = timer;
 			break;
 
 		case TO_CD:
